Clear itemList and QMap containing address<->item relation so we do not crash.

BUG:263115